Shadow titles fixed overflow

--- a/src/modules/shadow/assets/css/shadow.css
+++ b/src/modules/shadow/assets/css/shadow.css
@@ -49,7 +49,6 @@
 
 #shadow-titles {
     text-align: center;
-    overflow: hidden;
     background: #dfdfdf;
     text-transform: uppercase;
     font-size: 1em;
